crates/daemon/tests/snapshots/cli_help__cli_help_expert.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Find people who have answered similar questions before. Either give the message id of the question OR a free-text query; the daemon ranks answerers (not askers)

Usage: mxr expert [OPTIONS] [MESSAGE_ID]

Arguments:
  [MESSAGE_ID]  Message id of the question. Mutually exclusive with --query

Options:
      --query <QUERY>
      --include-self       Include the current user in results (excluded by default)
      --account <ACCOUNT>
      --limit <LIMIT>      [default: 5]
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
