crates/daemon/tests/snapshots/cli_help__cli_help_export.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Export a thread or matching search results

Usage: mxr export [OPTIONS] [THREAD_ID]

Arguments:
  [THREAD_ID]

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --format <FORMAT>    [default: markdown]
      --output <OUTPUT>
  -h, --help               Print help
