crates/daemon/tests/snapshots/cli_help__cli_help_headers.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show message headers. Pass a positional ID, pipe IDs on stdin, or resolve a list with `--search QUERY`

Usage: mxr headers [OPTIONS] [MESSAGE_ID]

Arguments:
  [MESSAGE_ID]

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --first
      --limit <LIMIT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
