crates/daemon/tests/snapshots/cli_help__cli_help_history.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show persisted event history

Usage: mxr history [OPTIONS]

Options:
      --category <CATEGORY>
      --level <LEVEL>
      --limit <LIMIT>        [default: 50]
      --format <FORMAT>      [possible values: table, json, jsonl, csv, ids]
  -h, --help                 Print help
