crates/daemon/tests/snapshots/cli_help__cli_help_invite_reply.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Reply to a calendar invite

Usage: mxr invite reply [OPTIONS] <MESSAGE_ID> <ACTION>

Arguments:
  <MESSAGE_ID>
  <ACTION>      [possible values: accept, tentative, decline]

Options:
      --account <ACCOUNT>
      --dry-run
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
