crates/daemon/tests/snapshots/cli_help__cli_help_invite_show.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show the calendar invite attached to one message

Usage: mxr invite show [OPTIONS] <MESSAGE_ID>

Arguments:
  <MESSAGE_ID>

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
