crates/daemon/tests/snapshots/cli_help__cli_help_invites.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List calendar invites found in email

Usage: mxr invites <COMMAND>

Commands:
  list      List recent calendar invites
  backfill  Backfill invite rows from already stored message bodies
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
