crates/daemon/tests/snapshots/cli_help__cli_help_invites_backfill.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Backfill invite rows from already stored message bodies

Usage: mxr invites backfill [OPTIONS]

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
