crates/daemon/tests/snapshots/cli_help__cli_help_invites_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List recent calendar invites

Usage: mxr invites list [OPTIONS]

Options:
      --limit <LIMIT>      [default: 50]
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
